_site/sql/hive/src/test/resources/ql/src/test/queries/negative/invalid_dot.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT src.value.member WHERE src.key < 100
